# noMoreSpam

./: .gitignore  .infisical.json  README.md  classify.py  classify_llm.py  classify_manual.py  evaluate.py  huggingface-README.md  huggingface-model-README.md  main.py  merge.py  prompt  pyproject.toml  train.py  utils.py
backend/: pyproject.toml
data/: get_comments.py  get_videos.py  train_test_split.py
