[project]
name = "noMoreSpam"
version = "0.1.0"
description = "Block bot comment with kcElectra"
readme = "README.md"
requires-python = ">=3.13.4"
dependencies = [
  "keras==3.11.1",
  "polars==1.32.2",
  "pydantic==2.11.7",
  "python-youtube==0.9.7",
  "gradio==5.41.1",
  "openai==1.99.5",
  "tqdm==4.67.1",
  "pydantic-ai-slim[openai]==0.6.2",
  "marimo==0.14.16",
  "anthropic==0.62.0",
  "plotly==6.2.0",
  "pyarrow==21.0.0",
  "transformers==4.55.0",
  "datasets==4.0.0",
  "protobuf==6.31.1",
  "altair==5.5.0",
  "python-lsp-server==1.13.0",
  "websockets==15.0.1",
  "python-lsp-ruff==2.2.2",
  "torch==2.8.0",
  "scikit-learn==1.7.1",
  "seaborn==0.13.2",
  "safetensors==0.6.2",
  "typer==0.16.0",
]

[project.optional-dependencies]
cpu = [
  "torch==2.8.0+cpu",
]
rocm = [
  "torch==2.8.0+rocm6.3",
  "pytorch-triton-rocm==3.4.0"
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "rocm" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-rocm", extra = "rocm" },
]
pytorch-triton-rocm = [
  { index = "pytorch-rocm", extra = "rocm" }
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm6.3"
explicit = true
